# IG-IntentGuard

./: .gitignore  LICENSE  PUBLIC_MANIFEST.md  README.md  README中文.md  pyproject.toml
.github/workflows/: tests.yml
docs/: limitations.md  public-preview-readiness.md  security-model.md
examples/: demo-flow.md  demo-policy.yaml
intentguard/: approvals.py  cli.py  hooks.py  main.py  models.py  secrets.py  tasks.py
intentguard/audit/: __init__.py  log.py
intentguard/policies/: __init__.py  policy.yaml
intentguard/policy/: __init__.py  decision.py
intentguard/scanner/: __init__.py  git_diff.py
tests/: conftest.py  test_approvals.py  test_approve_command.py  test_audit_command.py  test_audit_log.py  test_cli.py  test_create_task_command.py  test_default_policy.py  test_diff_models.py  test_git_diff_integration.py  test_git_diff_parser.py  test_git_diff_runner.py  test_init_command.py  test_install_hooks_command.py  test_models.py  test_scan_diff_command.py  test_scan_records.py  test_secret_detection.py  test_sprint1_policy_security_invariants.py  test_sprint2_task_boundary_security.py
tests/security/: test_policy_decisions.py
tests/security/mvp1a_sprint3/: test_scanner_security_contract.py
tests/security/mvp1a_sprint4/: test_policy_decision_security_contract.py
